chore: Update CSS to prevent text wrapping in Header and ToggleButtonWithContainer components; complete react-router-dom implementation.

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ h1 {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 58px calc(100vh - 58px - 54px) 54px;
+  grid-template-rows: 58px calc(100vh - 58px) 54px;
   overflow: hidden;
   background-image: url("./assets/chalkboard.jpg");
   box-sizing: border-box;
@@ -40,6 +40,7 @@ h1 {
   width: 100%;
   padding: 8px 4px;
   overflow-x: hidden;
+  min-height: calc(100vh - 58px - 54px - 38px);
 }
 /* width */
 ::-webkit-scrollbar {
@@ -84,7 +85,7 @@ h1 {
 @media screen and (max-width: 1200px) {
   .mainContainer {
     grid-template-columns: 1fr;
-    grid-template-rows: 84px 38px 1fr 54px;
+    grid-template-rows: 84px 1fr 54px;
   }
   .searchDiv {
     margin: 4px;
