--- a/src/components/ToggleButtonWithContainer.css
+++ b/src/components/ToggleButtonWithContainer.css
@@ -9,7 +9,7 @@
   padding-top: 3px;
 }
 
-h4.switchLabel {
+.switchLabel {
   display: flex;
   justify-content: center;
   color: hotpink;
@@ -18,6 +18,7 @@ h4.switchLabel {
   font-family: Roboto, sans;
   z-index: 1;
   margin-bottom: 4px;
+  text-wrap: nowrap;
 }
 
 .toggleDiv {
@@ -88,17 +89,19 @@ h4.switchLabel {
 
 @media screen and (max-width: 500px) {
   .switchContainer {
-    font-size: 12px;
     margin-right: 8px;
   }
 
-  h4.switchLabel {
-    font-size: 10px;
+  .switchLabel {
+    font-size: 0.65rem;
   }
 }
 
 @media screen and (max-width: 350px) {
   .switchContainer {
-    margin-top: -1px;
+    margin-top: 0.4rem;
+  }
+  .switchLabel {
+    font-size: 0.65rem;
   }
 }
